<resources>
    <string name="app_name" translatable="false">ProjetoBase</string>
    <string name="login">Usuario</string>
    <string name="password">Senha</string>
    <string name="confirmpassword">Confirmar a Senha</string>
    <string name="submit">Entrar</string>
    <string name="signup">Cadastre-se</string>
    <string name="change_password">Esqueci a senha</string>
    <string name="email">Email</string>
    <string name="signupButton">Cadastrar</string>
    <string name="title_activity_tela_principal">activity_tela_principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="new_list">Nova lista</string>
    <string name="find_list">Listas Antigas</string>
    <string name="Analise">Estatísticas</string>
    <string name="account">Conta</string>
    <string name="signout">Sair</string>
    <string name="recuepass">Recupere sua \nsenha</string>
    <string name="recuepass2">Informe o e-mail da conta \nque deseja recuperar a senha</string>
    <string name="recuepass_button">Enviar email</string>
    <string name="Produto">Produto</string>
    <string name="Quantidade">Quant.</string>
    <string name="Observacoes">Observações</string>
    <string name="SalvarLista">Dê um nome para sua lista</string>
    <string name="AcaoLista">Escolha uma ação</string>
    <string name="Nome">Nome</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Renomear">Renomear</string>
    <string name="Editar">Editar</string>
    <string name="Deletar">Deletar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>