<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_list_fragment"
            android:icon="@drawable/ic_baseline_create_new_folder_24"
            android:title="@string/new_list"
            />
        <item
            android:id="@+id/nav_archive_list_fragment"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/find_list" />
        <item
            android:id="@+id/nav_analytics_fragment"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/Analise" />
        <item
            android:id="@+id/nav_account_fragment"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/account" />
    </group>
</menu>