<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projetobase.ui.archive_list_fragment.ArchiveListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_archive_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.projetobase.ui.new_list_fragment.NewListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_new_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.projetobase.ui.analytics_fragment.AnalyticsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_analytics" />
</navigation>