<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:layout_margin="40dp"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textSize="24dp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:text="@string/SalvarLista"/>
    <EditText
        android:id="@+id/edit_text_name"
        style="@style/edit_text"
        android:hint="@string/Nome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="?attr/colorOnSecondary"
        android:drawableRight="@drawable/ic_baseline_help_24"
        android:lines="1"
        android:textColorHint="@color/black"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_confirm"
        style="@style/button"
        android:text="@string/Confirmar"
        android:layout_width="wrap_content"
        android:layout_marginRight="5dp"
        android:background="@drawable/background"
        android:backgroundTint="@color/green_blue"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="@style/button"
        android:text="@string/Cancelar"
        android:background="@color/red"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_confirm"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>