<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormCadastro"
        >

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="43sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponentsSignUp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_signup" />

        <EditText
            android:id="@+id/nameSignup"
            style="@style/edit_text"
            android:drawableRight="@drawable/icon_login"
            android:hint="@string/login"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents" />

        <EditText
            android:id="@+id/emailSignup"
            style="@style/edit_text"
            android:drawableRight="@drawable/icon_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/nameSignup" />

        <EditText
            android:id="@+id/passSignup"
            style="@style/edit_text"
            android:drawableRight="@drawable/icon_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/emailSignup" />

        <EditText
            android:id="@+id/passSignupConfirm"
            style="@style/edit_text"
            android:layout_marginBottom="10dp"
            android:drawableRight="@drawable/icon_password"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/passSignup" />

        <ProgressBar
            android:id="@+id/progress_bar_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sing_up" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sing_up"
            style="@style/button"
            android:onClick="LoadSignUp"
            android:text="@string/signupButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>