<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormCadastro"
        >

        <TextView
            android:id="@+id/text_rescue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/recuepass"
            android:textAlignment="center"
            android:textSize="43sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_rescue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/recuepass2"
            android:textSize="28sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_rescue" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponentsSignUp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_rescue2"/>


        <EditText
            android:id="@+id/emailrescue"
            style="@style/edit_text"
            android:drawableRight="@drawable/icon_email"
            android:backgroundTint="?attr/colorOnSecondary"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="?android:textColor"
            android:textColorHint="?android:textColor"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            app:layout_constraintBottom_toBottomOf="@id/containerComponents"/>


        <ProgressBar
            android:id="@+id/progress_bar_rescue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_rescue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_rescue"
            style="@style/button"
            android:text="@string/recuepass_button"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>